--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtga-club.ru",
+  "name": "mtga-club.herokuapp.com",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "Serega KTyH <archlis21@gmail.com>",
