--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtga-club.herokuapp.com",
+  "name": "mtga-club",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "Serega KTyH <archlis21@gmail.com>",
@@ -10,8 +10,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "heroku-postbuild": "npm run build"
+    "precommit": "npm run lint"
   },
   "dependencies": {
     "nuxt": "^1.0.0"
