--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "axios": "^0.18.0",
+    "firebase": "^5.3.0",
+    "nuxt": "^1.0.0",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
