--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "heroku-postbuild": "npm run build"
+    "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "firebase": "^5.3.0",
-    "nuxt": "^1.0.0",
-    "vuefire": "^1.4.5"
+    "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
